config-root/namespaces/jx-staging/customer-waiting-room-app/customer-waiting-room-app-svc.yaml
# Source: customer-waiting-room-app/templates/ksvc.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: customer-waiting-room-app
  labels:
    chart: "customer-waiting-room-app-0.0.88"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/minScale: "1"
    spec:
      containers:
        - image: "gcr.io/camunda-researchanddevelopment/customer-waiting-room-app:0.0.88"
          imagePullPolicy: IfNotPresent
          env:
            - name: PAYMENTS_SERVICE
              value: "http://payments-service.default.svc.cluster.local"
            - name: QUEUE_SERVICE
              value: "http://queue-service.default.svc.cluster.local"
            - name: SERVER_PORT
              value: "8080"
            - name: TICKETS_SERVICE
              value: "http://tickets-service.default.svc.cluster.local"
          livenessProbe:
            httpGet:
              path: /actuator/health
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 1
            httpGet:
              path: /actuator/health
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 400m
              memory: 512Mi
