config-root/namespaces/jx-staging/customer-waiting-room-app/customer-waiting-room-app-ingress.yaml
# Source: customer-waiting-room-app/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: customer-waiting-room-app
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: customer-waiting-room-app
              servicePort: 80
      host: customer-waiting-room-app-jx-staging.35.222.17.41.nip.io
